feat: add full file

--- a/singolo3.html
+++ b/singolo3.html
@@ -30,22 +30,18 @@
                     <textarea class="get_a_quote_textarea" placeholder="Describe your project in detail..." cols="30" rows="10"></textarea>
                     <input class="get_a_quote_sub" type="submit" value="Submit">
                 </form>
-
                 <div class="get_a_quote_contact">
                     <div class="get_a_quote_contact_h3">Contact Information</div>
                     <div class="get_a_quote_contact_p">Quisque hendrerit purus dapibus,
                         ornare nibh vitae, viver-ra nibh. Fusce vitae aliquam tellus. Proin
                         sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus.
                         Morbi at aliquet turpis, et consequat felis.</div>
-
-
                     <ul class="get_a_quote_contact_list">
                         <li class="get_a_quote_contact_item">
                             <div class="get_a_quote_contact_item_img">
                                 <img class="" src="assets\img\get_a_quote/location.png" alt="location">
                             </div>
-                            <a class="get_a_quote_contact_item_link"
-                               href="https://www.google.com/maps/search/Elm+St.+14%2F05+Lost+City/@46.4456398,30.7644946,14z/data=!3m1!4b1">
+                            <a class="get_a_quote_contact_item_link" href="https://www.google.com/maps/search/Elm+St.+14%2F05+Lost+City/@46.4456398,30.7644946,14z/data=!3m1!4b1">
                                 Elm St. 14/05 Lost City
                             </a>
                         </li>
@@ -66,8 +62,6 @@
             </div>
         </div>
     </section>
-
-
     <footer class="footer">
         <p class="footer_copyright">© Copyright 2013</p>
         <ul class="social_footer">
@@ -76,6 +70,5 @@
             <li class="icon_twitter"><a href="#"></a></li>
             <li class="icon_linkedin"><a href="#"></a></li>
         </ul>
-        <!--ul li*4 social-->
     </footer>
 </body>
