feat: add singolo DOM

--- a/index.html
+++ b/index.html
@@ -19,36 +19,43 @@
             <span class="red">*</span>
         </div>
         <div class="navigation">
-            <ul>
-                <li><span class="navigation-home">·</span><a href="#" class="navigation_home_red">home</a> </li>
-                <li><span>·</span><a href="#">services</a></li>
-                <li><span>·</span><a href="#">portfolio</a></li>
-                <li><span>·</span><a href="#">about</a></li>
-                <li><span>·</span><a href="#">contact</a></li>
+            <ul id="navigation">
+                <li><span class="navigation-home">·</span><a href="#" class="navigation_active">home</a> </li>
+                <li><span>·</span><a class="" href="#our_services">services</a></li>
+                <li><span>·</span><a class="" href="#portfolio">portfolio</a></li>
+                <li><span>·</span><a class="" href="#about_us">about</a></li>
+                <li><span>·</span><a class="" href="#get_a_quote">contact</a></li>
             </ul>
         </div>
     </header>
 
     <section class="slider">
-
-        <span class="arrow slider__arrow_left"></span>
-        <div class="picture">
-            <div class="phone-left">
-                <img id="iphone-vertical-shadow" src="assets/img/slider/phone_shadow.png" alt="shadow">
-                <img id="iphone-vertical-body" src="assets/img/slider/phone.png" alt="phone-vertical">
-                <img id="iphone-vertical-screen" src="assets/img/slider/phone_img_left.png" alt="display">
-            </div>
-            <div class="phone-right">
-                <img id="iphone-horizontal-shadow" src="assets/img/slider/phone_shadow.png" alt="shadow">
-                <img id="iphone-horizontal-body" src="assets/img/slider/phone.png" alt="phone-horizontal">
-                <img id="iphone-horizontal-screen" src="assets/img/slider/phone_img_right.png" alt="display">
+        <span class="arrow slider__arrow_left left"></span>
+        <div class="picture1 sl_p picture_active">
+            <div class="direction">
+                <div class="phone-left">
+                    <img class="iphone-vertical-shadow" src="assets/img/slider/phone_shadow.png" alt="shadow">
+                    <img class="iphone-vertical-body body_phone" src="assets/img/slider/phone.png" alt="phone-vertical">
+                    <img class="iphone-vertical-screen phone_screen" src="assets/img/slider/phone_img_left.png" alt="display">
+                </div>
+                <div class="phone-right">
+                    <img class="iphone-horizontal-shadow" src="assets/img/slider/phone_shadow.png" alt="shadow">
+                    <img class="iphone-horizontal-body body_phone" src="assets/img/slider/phone.png" alt="phone-horizontal">
+                    <img class="iphone-horizontal-screen phone_screen" src="assets/img/slider/phone_img_right.png" alt="display">
+                </div>
             </div>
         </div>
-        <span class="arrow slider__arrow_right"></span>
-
+        <div class="picture2 sl_p">
+            <div class="direction">
+                <div class="phone-center">
+                    <img src="assets/img/slider/phone-center.png" alt="phone-center">
+                </div>
+            </div>
+        </div>
+        <span class="arrow slider__arrow_right right"></span>
     </section>
 
-    <section class="our_services">
+    <section class="our_services" id="our_services">
         <div class="our_services-text">
             <h2>Our Services</h2>
             <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.
@@ -128,63 +135,63 @@
 
 
     <!--PART2-->
-    <section class="portfolio">
+    <section class="portfolio" id="portfolio">
         <div class="portfolio_block">
             <div class="portfolio_text">
                 <h2>Portfolio</h2>
                 <p>Duis mollis, est non commodo luctus, nisi erat porttitor
                     ligula, eget lacinia odio sem nec elit.</p>
                 <div>
-                    <ul class="portfolio_text_icon">
-                        <li class="portfolio_button portfolio_button_all">All</li>
+                    <ul class="portfolio_text_icon" id="portfolio_text_icon">
+                        <li class="portfolio_button portfolio_active">All</li>
                         <li class="portfolio_button">Web Design</li>
                         <li class="portfolio_button">Graphic Design</li>
                         <li class="portfolio_button">Artwork</li>
                     </ul>
                 </div>
             </div>
-            <ul class="portfolio_pictures">
-                <li>
-                    <img src="assets/img/portfolio/1.png" alt="1">
+            <ul class="portfolio_pictures" id="portfolio_pictures">
+                <li class="portfolio_img">
+                    <img class="" src="assets/img/portfolio/1.png" alt="1">
                 </li>
-                <li>
-                    <img src="assets/img/portfolio/2.png" alt="2">
+                <li class="portfolio_img">
+                    <img class="" src="assets/img/portfolio/2.png" alt="2">
                 </li>
-                <li>
-                    <img src="assets/img/portfolio/3.png" alt="3">
+                <li class="portfolio_img">
+                    <img class="" src="assets/img/portfolio/3.png" alt="3">
                 </li>
-                <li>
-                    <img src="assets/img/portfolio/4.png" alt="4">
+                <li class="portfolio_img">
+                    <img class="" src="assets/img/portfolio/4.png" alt="4">
                 </li>
-                <li>
-                    <img src="assets/img/portfolio/5.png" alt="5">
+                <li class="portfolio_img">
+                    <img class="" src="assets/img/portfolio/5.png" alt="5">
                 </li>
-                <li>
-                    <img src="assets/img/portfolio/6.png" alt="6">
+                <li class="portfolio_img">
+                    <img class="" src="assets/img/portfolio/6.png" alt="6">
                 </li>
-                <li>
-                    <img src="assets/img/portfolio/7.png" alt="7">
+                <li class="portfolio_img">
+                    <img class="" src="assets/img/portfolio/7.png" alt="7">
                 </li>
-                <li>
-                    <img src="assets/img/portfolio/8.png" alt="8">
+                <li class="portfolio_img">
+                    <img class="" src="assets/img/portfolio/8.png" alt="8">
                 </li>
-                <li>
-                    <img src="assets/img/portfolio/9.png" alt="9">
+                <li class="portfolio_img">
+                    <img class="" src="assets/img/portfolio/9.png" alt="9">
                 </li>
-                <li>
-                    <img src="assets/img/portfolio/10.png" alt="10">
+                <li class="portfolio_img">
+                    <img class="" src="assets/img/portfolio/10.png" alt="10">
                 </li>
-                <li>
-                    <img src="assets/img/portfolio/11.png" alt="11">
+                <li class="portfolio_img">
+                    <img class="" src="assets/img/portfolio/11.png" alt="11">
                 </li>
-                <li>
-                    <img src="assets/img/portfolio/12.png" alt="12">
+                <li class="portfolio_img">
+                    <img class="" src="assets/img/portfolio/12.png" alt="12">
                 </li>
             </ul>
         </div>
     </section>
 
-    <section class="about_us">
+    <section class="about_us" id="about_us">
         <div class="about_us_block">
             <div class="about_us_text">
                 <h2>About Us</h2>
@@ -235,7 +242,7 @@
 
 
     <!--PART3-->
-    <section class="get_a_quote">
+    <section class="get_a_quote" id="get_a_quote">
         <div class="get_a_quote_box">
             <div class="get_a_quote_text">
                 <h2>Get a Quote</h2>
@@ -248,9 +255,9 @@
                 <form action="">
                     <input class="get_a_quote_forms" type="text" required placeholder="Name (Required)">
                     <input class="get_a_quote_forms" type="email" required placeholder="Email (Required)" name="mail" id="mail">
-                    <input class="get_a_quote_forms" type="text" placeholder="Subject">
-                    <textarea class="get_a_quote_textarea" placeholder="Describe your project in detail..." cols="30" rows="10"></textarea>
-                    <input class="get_a_quote_sub" type="submit" value="Submit">
+                    <input class="get_a_quote_forms" type="text" id="subject" placeholder="Subject">
+                    <textarea class="get_a_quote_textarea" id="describe" placeholder="Describe your project in detail..." cols="30" rows="10"></textarea>
+                    <input class="get_a_quote_sub" id="btn" type="submit" value="Submit">
                 </form>
                 <div class="get_a_quote_contact">
                     <div class="get_a_quote_contact_h3">Contact Information</div>
@@ -283,6 +290,15 @@
                 </div>
             </div>
         </div>
+
+        <div id="message_block" class="hidden">
+            <div id="message">
+                <p>Письмо отправлено</p>
+                <p><span id="theme"></span></p>
+                <p><span id="description"></span></p>
+                <button id="exit_btn">OK</button>
+            </div>
+        </div>
     </section>
 
     <footer class="footer">
@@ -294,6 +310,8 @@
             <li class="icon_linkedin"><a href="#"></a></li>
         </ul>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
