--- a/index.html
+++ b/index.html
@@ -291,11 +291,13 @@
             </div>
         </div>
 
-        <div id="message_block" class="hidden">
+        <div id="message_block" class="">
             <div id="message">
-                <p>Письмо отправлено</p>
-                <p><span id="theme"></span></p>
-                <p><span id="description"></span></p>
+                <div id="message_text">
+                    <p>Письмо отправлено</p>
+                    <p><span id="theme"></span></p>
+                    <p><span id="description"></span></p>
+                </div>
                 <button id="exit_btn">OK</button>
             </div>
         </div>
