fix: changed message block

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             </div>
         </div>
 
-        <div id="message_block" class="">
+        <div id="message_block" class="hidden">
             <div id="message">
                 <div id="message_text">
                     <p>Письмо отправлено</p>
