feat: add singolo Responsive

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
 
     <section class="slider">
-        <span class="arrow slider__arrow_left left"></span>
+        <span class="arrow slider__arrow_left"></span>
         <div class="picture1 sl_p picture_active">
             <div class="direction">
                 <div class="phone-left">
@@ -52,7 +52,7 @@
                 </div>
             </div>
         </div>
-        <span class="arrow slider__arrow_right right"></span>
+        <span class="arrow slider__arrow_right"></span>
     </section>
 
     <section class="our_services" id="our_services">
@@ -252,7 +252,7 @@
                     tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
             </div>
             <div class="get_a_quote_form">
-                <form action="">
+                <form action="" id="myform">
                     <input class="get_a_quote_forms" type="text" required placeholder="Name (Required)">
                     <input class="get_a_quote_forms" type="email" required placeholder="Email (Required)" name="mail" id="mail">
                     <input class="get_a_quote_forms" type="text" id="subject" placeholder="Subject">
