--- a/index.html
+++ b/index.html
@@ -295,8 +295,10 @@
             <div id="message">
                 <div id="message_text">
                     <p>Письмо отправлено</p>
-                    <p><span id="theme"></span></p>
-                    <p><span id="description"></span></p>
+                    <div class="max_height_message_text"><span id="theme"></span></div>
+                    <!-- <p class="max_height_message_text"><span id="theme"></span></p> -->
+                    <div class="max_height_message_text"><span id="description"></span></div>
+                    <!-- <p class="max_height_message_text"><span id="description"></span></p> -->
                 </div>
                 <button id="exit_btn">OK</button>
             </div>
